# agent-toolkit

./: .env.example  .gitignore  2  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  plan.md
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  stream.rs  types.rs
crates/agent-core/src/stream/: canonical.rs  item.rs  mod.rs  raw.rs
crates/agent-core/src/types/: identity.rs  message.rs  mod.rs  native_options.rs  planning.rs  platform.rs  request.rs  response.rs  task.rs  tool.rs
crates/agent-core/tests/: lib_exports_test.rs  message_helpers_test.rs  native_options_typed_serde_test.rs  provider_raw_stream_event_test.rs  streaming_types_test.rs  task_identity_test.rs
crates/agent-providers/: Cargo.toml
crates/agent-providers/src/: adapter.rs  error.rs  handles.rs  lib.rs  request_plan.rs  stream_projector.rs  streaming.rs  test_fixtures.rs  test_fixtures_test.rs  test_support.rs  translator_contract.rs
crates/agent-providers/src/adapter/: anthropic.rs  core.rs  mod.rs  openai.rs  openrouter.rs  test.rs
crates/agent-providers/src/anthropic_family/: anthropic_decode_test.rs  anthropic_encode_test.rs  anthropic_schema_rules_test.rs  anthropic_test_helpers.rs  decode.rs  encode.rs  mod.rs  streaming.rs  test.rs  types.rs
crates/agent-providers/src/anthropic_spec/: decode.rs  encode.rs  mod.rs  schema_rules.rs  test.rs
crates/agent-providers/src/families/: mod.rs
crates/agent-providers/src/family_codec/: anthropic.rs  anthropic_decoded_fixtures_test.rs  anthropic_request_test.rs  anthropic_response_test.rs  anthropic_stream_projector.rs  anthropic_stream_test.rs  mod.rs  openai_compatible.rs  openai_compatible_decoded_fixtures_test.rs  openai_compatible_stream_projector.rs  openai_compatible_stream_test.rs
crates/agent-providers/src/fixture_tests/: helpers.rs  mod.rs  test.rs
crates/agent-providers/src/interfaces/: adapter.rs  family_codec.rs  mod.rs  refinement.rs  stream_projector.rs
crates/agent-providers/src/openai_family/: decode.rs  encode.rs  mod.rs  openai_decode_test.rs  openai_encode_test.rs  openai_schema_rules_test.rs  openai_test_helpers.rs  streaming.rs  test.rs  types.rs  types_test.rs
crates/agent-providers/src/openai_spec/: decode.rs  encode.rs  mod.rs  schema_rules.rs  test.rs
crates/agent-providers/src/overlay/: anthropic.rs  anthropic_overlay_test.rs  anthropic_request_test.rs  anthropic_response_test.rs  generic_openai_compatible.rs  mod.rs  openai.rs  openai_overlay_test.rs  openai_request_test.rs  openai_response_test.rs  openrouter.rs  openrouter_decoded_fixtures_test.rs  openrouter_overlay_test.rs  openrouter_request_test.rs  openrouter_stream_projector.rs  openrouter_stream_test.rs
crates/agent-providers/src/platform/: mod.rs  test_fixtures.rs  test_fixtures_test.rs
crates/agent-providers/src/providers/: mod.rs  openai_compatible.rs  openai_compatible_test.rs
crates/agent-providers/src/refinement/: anthropic.rs  generic_openai_compatible.rs  mod.rs  openai.rs  openrouter.rs  openrouter_stream_projector.rs
crates/agent-providers/tests/: adapter_error_test.rs  provider_contract_test.rs  translator_contract_test.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: agent_toolkit.rs  attempt.rs  attempt_execution_options.rs  attempt_spec.rs  base_client_builder.rs  conversation.rs  direct_messages_api.rs  direct_streaming_api.rs  execution_options.rs  fallback.rs  lib.rs  message_create_input.rs  message_response_stream.rs  message_text_stream.rs  messages_api.rs  observer.rs  planner.rs  planning_rejection_policy.rs  provider_client.rs  provider_config.rs  provider_runtime.rs  provider_stream_runtime.rs  registered_provider.rs  route.rs  route_planning.rs  routed_messages_api.rs  routed_streaming_api.rs  router_messages_api.rs  runtime_error.rs  send_options.rs  target.rs  test.rs  types.rs
crates/agent-runtime/src/agent_toolkit/: builder.rs  execution.rs  mod.rs
crates/agent-runtime/src/api/: direct_messages_api.rs  direct_streaming_api.rs  mod.rs  routed_messages_api.rs  routed_streaming_api.rs
crates/agent-runtime/src/clients/: anthropic.rs  base_client_builder.rs  common.rs  mod.rs  openai.rs  openrouter.rs
crates/agent-runtime/src/message/: conversation.rs  message_create_input.rs  message_text_stream.rs  mod.rs
crates/agent-runtime/src/message_response_stream/: driver.rs  events.rs  mod.rs  state.rs
crates/agent-runtime/src/observability/: events.rs  mod.rs  observer.rs
crates/agent-runtime/src/provider/: mod.rs  provider_client.rs  provider_config.rs  registered_provider.rs
crates/agent-runtime/src/provider_runtime/: attempt.rs  core.rs  mod.rs  transport.rs
crates/agent-runtime/src/provider_stream_runtime/: core.rs  finalize.rs  mod.rs  reducer.rs  structured_output.rs
crates/agent-runtime/src/routing/: attempt.rs  fallback.rs  mod.rs  planner.rs  route.rs
crates/agent-runtime/src/test/: agent_toolkit_builder_test.rs  agent_toolkit_execution_test.rs  agent_toolkit_routing_test.rs  agent_toolkit_test.rs  agent_toolkit_test_fixtures.rs  client_native_options_test.rs  clients_test.rs  (+29 more)
crates/agent-runtime/tests/: observer_test.rs  provider_streaming_bridge_test.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: builder.rs  lib.rs  registry.rs  runtime.rs  schema.rs  tool.rs
crates/agent-tools/tests/: builder_test.rs  registry_test.rs  runtime_test.rs  schema_test.rs  tool_builder_test.rs
crates/agent-transport/: Cargo.toml
crates/agent-transport/src/: lib.rs
crates/agent-transport/tests/: http_test.rs  lib_exports_test.rs
crates/agent/examples/: basic_openai.rs  conversation.rs  explicit_request.rs  kitchen_sink.rs  routed_toolkit.rs  streaming_text.rs  tool_calling.rs
crates/agent/src/: lib.rs  prelude.rs  test.rs
crates/agent/tests/: e2e_error_edge_test.rs  e2e_high_level_clients_test.rs  e2e_live_anthropic_thinking_test.rs  e2e_live_native_options_test.rs  e2e_live_observer_test.rs  e2e_live_streaming_test.rs  e2e_live_tool_loop_test.rs  e2e_low_level_request_apis_test.rs  e2e_router_fallback_observability_test.rs
(+482 files in other folders)
