[workspace]
members = [
  "crates/agent",
  "crates/agent-core",
  "crates/agent-providers",
  "crates/agent-runtime",
  "crates/agent-tools",
  "crates/agent-transport",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
