[workspace]
members = [
  "crates/agent",
  "crates/agent-core",
  "crates/agent-providers",
  "crates/agent-runtime",
  "crates/agent-tools",
  "crates/agent-transport",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/arod183/agent-toolkit"
homepage = "https://github.com/arod183/agent-toolkit"
documentation = "https://github.com/arod183/agent-toolkit"
readme = "README.md"
keywords = ["agent", "llm", "ai", "tooling"]
categories = ["api-bindings", "asynchronous"]

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[workspace.lints.rust]
missing_docs = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "warn"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"
large_enum_variant = "warn"
