[package]
name = "agent-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provider protocol adapters and translations for agent-toolkit."

[features]
test-support = []

[dependencies]
agent-core = { path = "../agent-core" }
agent-transport = { path = "../agent-transport" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
