[package]
name = "agent_toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Facade crate re-exporting the agent-toolkit workspace APIs."

[features]
default = []
live-tests = []

[dependencies]
agent-core = { path = "../agent-core" }
agent-providers = { path = "../agent-providers" }
agent-runtime = { path = "../agent-runtime" }
agent-tools = { path = "../agent-tools" }
agent-transport = { path = "../agent-transport" }

[dev-dependencies]
futures-util = "0.3"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
