[package]
name = "agent_toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Facade crate re-exporting the agent-toolkit workspace APIs."

[features]
default = []
live-tests = []
openai = ["agent-runtime/openai"]
anthropic = ["agent-runtime/anthropic"]
openrouter = ["agent-runtime/openrouter"]
providers-all = ["openai", "anthropic", "openrouter"]

[dependencies]
agent-core = { path = "../agent-core" }
agent-providers = { path = "../agent-providers" }
agent-runtime = { path = "../agent-runtime", default-features = false }
agent-tools = { path = "../agent-tools" }
agent-transport = { path = "../agent-transport" }

[dev-dependencies]
dotenvy.workspace = true
futures-util = "0.3"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true

[[example]]
name = "basic_openai"
required-features = ["openai"]

[[example]]
name = "conversation"
required-features = ["openai"]

[[example]]
name = "explicit_request"
required-features = ["openai"]

[[example]]
name = "kitchen_sink"
required-features = ["openai"]

[[example]]
name = "routed_toolkit"
required-features = ["openai", "openrouter"]

[[example]]
name = "streaming_text"
required-features = ["openai"]

[[example]]
name = "tool_calling"
required-features = ["openai"]
